# get_file_hash

./: .gitignore  BUILD.md  Cargo.toml  README.md  build.rs  dist-workspace.toml  group_public.json  n34-relay.sh  n34-repo-view.sh  p0000000000000000000000000000000000000000000000000000000000000001_key.json  p0000000000000000000000000000000000000000000000000000000000000002_key.json  p0000000000000000000000000000000000000000000000000000000000000003_key.json  p1_batch_vault.json  p1_key.json  p1_vault.json  p2_vault.json
.github/workflows/: release.yml  rust.yml
examples/: cli-parser.rs  deterministic-dealer.rs  frost_bip_340.rs  frost_mailbox.rs  frost_mailbox_post.rs  git-empty-state.rs  gnostr-build.rs  nonce-generation-1.rs  nonce-generation-2.rs  nonce-generation-3.rs  nonce-generation-4.rs  nonce-generation-5.rs  nonce-generation-6.rs  nonce-generation-7.rs  nonce-generation-8.rs  publish_issue.rs  publish_patch.rs  publish_patch_with_metadata.rs  publish_pr_update.rs  publish_pull_request.rs  publish_repository_state.rs  repository_announcement.rs  roast-experiment.rs  screenshot.rs  trusted-dealer.rs
n34/: .taplo.toml  AUTHORS  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  book.toml  cliff.toml  flake.nix  justfile  nostr-address
n34-relay/: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  config.toml  flake.nix  rustfmt.toml
n34-relay/crates/nostr/: .cargo-checksum.json  Cargo.toml
n34-relay/crates/nostr-database/: .cargo-checksum.json  Cargo.toml
n34-relay/crates/nostr-gossip/: .cargo-checksum.json  Cargo.toml
n34-relay/crates/nostr-lmdb/: .cargo-checksum.json  Cargo.toml
n34-relay/crates/nostr-memory/: .cargo-checksum.json  Cargo.toml
n34-relay/crates/nostr-relay-builder/: .cargo-checksum.json  Cargo.toml
n34-relay/crates/nostr-sdk/: .cargo-checksum.json  Cargo.toml
n34-relay/examples/: common.rhai  no_hashtag.rhai  no_kind_one.rhai  simple_plugins_grpc.rs
n34-relay/grasp-docs/: 01.md  02.md  05.md  README.md
n34-relay/proto/: plugins.proto
n34-relay/scripts/: n34-relay.sh
n34-relay/src/: default-homepage.html  errors.rs  ext_traits.rs  lib.rs  main.rs  pathes.rs  raw_websocket.rs  router_state.rs  utils.rs
n34-relay/src/endpoints/: mod.rs  nip11.rs
n34-relay/src/endpoints/nip86/: errors.rs  mod.rs  params.rs  requests.rs  responses.rs  utils.rs
n34-relay/src/git_server/: get_file_content.rs  git_command.rs  info_refs.rs  mod.rs  path_and_query.rs  receive_pack.rs  ref_update_pkt_line.rs  upload_pack.rs  utils.rs
n34-relay/src/relay/: event_size_plugin.rs  grpc_manager.rs  mod.rs  plugins_manager.rs  whitelist_plugins.rs
n34-relay/src/relay/grasp/: git_command.rs  middlewares.rs  mod.rs  plugins.rs
n34-relay/src/relay/rhai_manager/: mod.rs  rhai_caller.rs  rhai_errors.rs  rhai_parser.rs  rhai_runner.rs  rhai_worker.rs
n34-relay/src/relay_config/: defaults.rs  env.rs  mod.rs  parsers.rs
n34-relay/wix/: main.wxs
n34/docs/: SUMMARY.md  commands.md  index.html  reply.md
n34/docs/config/: README.md  bunker.md  keyring.md  nip07.md  pow.md  relays.md
n34/docs/issue/: README.md  close.md  list.md  new.md  reopen.md  resolve.md  view.md
n34/docs/patch/: README.md  apply.md  close.md  draft.md  fetch.md  list.md  merge.md  reopen.md  send.md
n34/docs/repo/: README.md  announce.md  view.md
n34/docs/sets/: README.md  new.md  remove.md  show.md  update.md
n34/scripts/: repo-view.sh
n34/src/: error.rs  lib.rs  main.rs
n34/src/cli/: common_commands.rs  config.rs  defaults.rs  macros.rs  mod.rs  options_state.rs  parsers.rs  traits.rs  types.rs
n34/src/cli/commands/: mod.rs  reply.rs
n34/src/cli/commands/config/: bunker.rs  keyring.rs  mod.rs  nip07.rs  pow.rs  relays.rs
n34/src/cli/commands/issue/: close.rs  list.rs  mod.rs  new.rs  reopen.rs  resolve.rs  view.rs
n34/src/cli/commands/patch/: apply.rs  close.rs  draft.rs  fetch.rs  list.rs  merge.rs  mod.rs  reopen.rs  send.rs  tests.rs
n34/src/cli/commands/repo/: announce.rs  mod.rs  view.rs
n34/src/cli/commands/sets/: mod.rs  new.rs  remove.rs  show.rs  update.rs
n34/src/nostr_utils/: mod.rs  traits.rs  utils.rs
n34/wix/: main.wxs
scripts/: cli-parser.sh
src/: lib.rs
src/get_file_hash_core/: Cargo.toml  build.rs
src/get_file_hash_core/src/: frost_mailbox_logic.rs  lib.rs  online_relays_gps.csv
src/get_file_hash_proc_macro/: Cargo.toml
src/get_file_hash_proc_macro/src/: lib.rs
tests/: integration_tests.rs
wix/: main.wxs
