[workspace]
members = [".", "src/get_file_hash_core", "n34", "n34-relay"]

[workspace.package]
version = "0.4.0+n34"
edition = "2024"
license = "MIT"
authors = ["gnostr admin@gnostr.org"]
documentation = "https://github.com/gnostr-org/get_file_hash#readme"
homepage = "https://github.com/gnostr-org/get_file_hash"
repository = "https://github.com/gnostr-org/get_file_hash"
description = "A utility crate providing a procedural macro to compute and embed file hashes at compile time."

[package]
name = "get_file_hash"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
license.workspace = true

[package.metadata.wix]
upgrade-guid = "DED69220-26E3-4406-B564-7F2B58C56F57"
path-guid = "8DB39A25-8B99-4C25-8CF5-4704353C7C6E"
license = false
eula = false

[features]
nostr = ["dep:nostr", "dep:nostr-sdk", "dep:hex"]
frost = ["dep:nostr", "dep:nostr-sdk", "dep:hex"]

[workspace.dependencies]
get_file_hash_core = { features = ["nostr"], path = "src/get_file_hash_core", version = "0.4.0+n34" }
rand_chacha = "0.3"
sha2 = "0.11.0"
nostr = { version = "0.44.2", features = ["std", "nip46"] }
nostr-sdk = { version = "0.44.0", default-features = false, features = ["default"] }
hex = "0.4.2"
tokio = "1"
serde_json = "1.0"
csv = { version = "1.3.0", default-features = false }
url = "2.5.0"
reqwest = { version = "0.12.0", default-features = false }
tempfile = "3.27.0"
rand = "0.8"
frost-secp256k1-tr = "3.0.0-rc.0"
serial_test = { version = "3.4.0", features = ["test_logging"] }
log = "0.4"
n34 = { version = "0.4.0", path = "n34" }
n34-relay = { version = "0.1.0", path = "n34-relay" }
chrono                     = "0.4.41"
convert_case               = "0.8.0"
dirs                       = "6.0.0"
easy-ext                   = "1.0.2"
either                     = "1.15.0"
futures                    = "0.3.31"
nostr-browser-signer-proxy = "0.43.0"
regex                      = "1.11.1"
thiserror                  = "2.0.12"
toml                       = "0.9.4"
tracing                    = "0.1.41"
tracing-subscriber         = "0.3.19"


[dependencies]
get_file_hash_core = { workspace = true, features = ["nostr"]  }
sha2 = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
nostr = { workspace = true, optional = true }
nostr-sdk = { workspace = true, optional = true }
hex = { workspace = true, optional = true }
tokio = { workspace = true, features = ["full"] }
frost-secp256k1-tr = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }
rand_chacha = { workspace = true }
n34 = { workspace = true }
n34-relay = { workspace = true }
axum               = { version = "0.8.6", features = ["http2", "ws"] }
base64             = "0.22.1"
chrono             = "0.4.42"
config             = { version = "0.15.15", default-features = false, features = ["toml"] }
const_format       = "0.2.34"
convert_case       = "0.8.0"
easy-ext           = "1.0.2"
either             = "1.15.0"
flume              = "0.11.1"
futures            = "0.3.31"
hyper              = "1.7.0"
hyper-util         = "0.1.17"
parking_lot        = { version = "0.12.5", features = ["serde"] }
prost              = "0.14.1"
serde              = { version = "1.0.219", features = ["rc"] }
#serde_json         = "1.0.145"
serde_with         = "3.15.0"
sha1               = "0.10.6"
#sha2               = "0.10.9"
strum              = { version = "0.27.2", features = ["derive"] }
thiserror          = "2.0.16"
tokio-util         = { version = "0.7.17", features = ["io"] }
toml               = "0.9.5"
tonic-prost        = "0.14.2"
tower              = { version = "0.5.2", features = ["limit"] }
#tracing            = "0.1.41"
#tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
dirs = "6.0.0"
rhai = { version = "1.23.4", features = [
  "no_position",
  "sync",
  "serde",
  "decimal",
] }
##tokio = { version = "1.47.1", features = [
##  "macros",
##  "rt-multi-thread",
##  "signal",
##  "fs",
##  "process",
##] }
tonic = { version = "0.14.2", features = [
  "tls-ring",
  "tls-webpki-roots",
  "gzip",
  "deflate",
] }
tower-http = { version = "0.6.6", features = [
  "cors",
  "decompression-br",
  "decompression-deflate",
  "decompression-gzip",
  "decompression-zstd",
  "trace",
  "timeout",
] }



[dependencies.clap]
features = ["derive"]
version  = "4.5.42"

[dependencies.clap-verbosity-flag]
default-features = false
features         = ["tracing"]
version          = "3.0.3"



  # We frequently switch between stable and unstable versions; this will make the
  # process easier.
  ## [dependencies.nostr]
  ## default-features = false
  ## features         = ["std"]
  ## git              = "https://git.4rs.nl/mirrors/nostr.git"
  ## rev              = "27a1947d3"
  ## # version          = "0.45.0"
  [dependencies.nostr-database]
  default-features = false
  git              = "https://git.4rs.nl/mirrors/nostr.git"
  rev              = "27a1947d3"
  # version          = "0.45.0"
  [dependencies.nostr-lmdb]
  default-features = false
  git              = "https://git.4rs.nl/mirrors/nostr.git"
  rev              = "27a1947d3"
  # version          = "0.45.0"
  [dependencies.nostr-relay-builder]
  default-features = false
  git              = "https://git.4rs.nl/mirrors/nostr.git"
  rev              = "27a1947d3"
  # version          = "0.45.0"





[build-dependencies]
get_file_hash_core = { workspace = true, features = ["nostr"] }
sha2 = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
nostr = { workspace = true }
nostr-sdk = { workspace = true }
hex = { workspace = true }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[dev-dependencies]
serial_test = { workspace = true }

[[example]]
name = "gnostr-build"
path = "examples/gnostr-build.rs"
required-features = ["nostr"]
