[package]
name         = "n34-relay"
description  = "A nostr GRASP relay implementation"
version      = "0.1.0"
edition      = "2024"
license      = "AGPL-3.0-or-later"
authors      = ["Awiteb <a@4rs.nl>"]
readme       = "README.md"
repository   = "https://github.com/gnostr-org/get_file_hash.git"
documentation = "https://relay.n34.dev/docs.html"
homepage      = "https://relay.n34.dev"
keywords     = ["nostr", "NIP-34", "GRASP"]
rust-version = "1.88.0"

[features]
gen-protos = []

[package.metadata.wix]
upgrade-guid = "036A2A4F-DA54-4FE2-B2D8-8C58D5814874"
path-guid = "97D3207D-71DB-4DD0-B548-E43E8C664B7D"
license = false
eula = false

documentation = "https://relay.n34.dev/docs.html"
homepage      = "https://relay.n34.dev"

[[bin]]
name = "n34-relay"
path = "src/main.rs"

[dependencies]
rhai = { version = "1.23.4", features = [
  "no_position",
  "sync",
  "serde",
  "decimal",
] }
tokio = { version = "1.47.1", features = [
  "macros",
  "rt-multi-thread",
  "signal",
  "fs",
  "process",
] }
tonic = { version = "0.14.2", features = [
  "tls-ring",
  "tls-webpki-roots",
  "gzip",
  "deflate",
] }
tower-http = { version = "0.6.6", features = [
  "cors",
  "decompression-br",
  "decompression-deflate",
  "decompression-gzip",
  "decompression-zstd",
  "trace",
  "timeout",
] }

axum               = { version = "0.8.6", features = ["http2", "ws"] }
base64             = "0.22.1"
chrono             = "0.4.42"
config             = { version = "0.15.15", default-features = false, features = ["toml"] }
const_format       = "0.2.34"
convert_case       = "0.8.0"
easy-ext           = "1.0.2"
either             = "1.15.0"
flume              = "0.11.1"
futures            = "0.3.31"
hyper              = "1.7.0"
hyper-util         = "0.1.17"
parking_lot        = { version = "0.12.5", features = ["serde"] }
prost              = "0.14.1"
serde              = { version = "1.0.219", features = ["rc"] }
serde_json         = "1.0.145"
serde_with         = "3.15.0"
sha1               = "0.10.6"
sha2               = "0.10.9"
strum              = { version = "0.27.2", features = ["derive"] }
thiserror          = "2.0.16"
tokio-util         = { version = "0.7.17", features = ["io"] }
toml               = "0.9.5"
tonic-prost        = "0.14.2"
tower              = { version = "0.5.2", features = ["limit"] }
tracing            = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
dirs = "6.0.0"

  # We frequently switch between stable and unstable versions; this will make the
  # process easier.
  [dependencies.nostr]
  default-features = false
  features         = ["std"]
  git              = "https://git.4rs.nl/mirrors/nostr.git"
  rev              = "27a1947d3"
  # version          = "0.45.0"
  [dependencies.nostr-database]
  default-features = false
  git              = "https://git.4rs.nl/mirrors/nostr.git"
  rev              = "27a1947d3"
  # version          = "0.45.0"
  [dependencies.nostr-lmdb]
  default-features = false
  git              = "https://git.4rs.nl/mirrors/nostr.git"
  rev              = "27a1947d3"
  # version          = "0.45.0"
  [dependencies.nostr-relay-builder]
  default-features = false
  git              = "https://git.4rs.nl/mirrors/nostr.git"
  rev              = "27a1947d3"
  # version          = "0.45.0"

[build-dependencies]
tonic-prost-build = "0.14.2"
[target.'cfg(not(windows))'.build-dependencies]
protobuf-src = "2.1.0"

# [profile.release]
# lto       = "fat"
# opt-level = 3
