[package]
name          = "n34"
description   = "A CLI to interact with NIP-34 and other stuff related to code in Nostr"
version       = "0.4.0"
edition       = "2024"
license       = "GPL-3.0-or-later"
authors       = ["Awiteb <a@4rs.nl>"]
readme        = "README.md"
documentation = "https://n34.dev/commands.html"
homepage      = "https://n34.dev"
repository    = "https://git.4rs.nl/awiteb/n34.git"
keywords      = ["nostr", "NIP-34", "CLI"]
categories    = ["command-line-utilities"]
rust-version  = "1.88.0"

[[bin]]
name = "n34"
path = "src/main.rs"

[dependencies]
chrono                     = "0.4.41"
convert_case               = "0.8.0"
dirs                       = "6.0.0"
easy-ext                   = "1.0.2"
either                     = "1.15.0"
futures                    = "0.3.31"
nostr-browser-signer-proxy = "0.43.0"
regex                      = "1.11.1"
tempfile                   = "3.20.0"
thiserror                  = "2.0.12"
toml                       = "0.9.4"
tracing                    = "0.1.41"
tracing-subscriber         = "0.3.19"

  [dependencies.clap]
  features = ["derive"]
  version  = "4.5.42"

  [dependencies.clap-verbosity-flag]
  default-features = false
  features         = ["tracing"]
  version          = "3.0.3"

  [dependencies.nostr]
  default-features = false
  features         = ["std"]
  version          = "0.43.0"

  [dependencies.nostr-connect]
  default-features = false
  version          = "0.43.0"

  [dependencies.nostr-keyring]
  default-features = false
  version          = "0.43.0"

  [dependencies.nostr-sdk]
  default-features = false
  version          = "0.43.0"

  [dependencies.reqwest]
  default-features = false
  features         = ["http2", "json", "rustls-tls"]
  version          = "0.12.22"

  [dependencies.serde]
  features = ["derive"]
  version  = "1.0.219"

  [dependencies.tokio]
  features = ["macros", "rt-multi-thread"]
  version  = "1.47.1"

# [profile.release]
# lto       = "fat"
# opt-level = 3
