[package]
name = "get_file_hash_core"
version.workspace = true
edition = "2024"
description = "A procedural macro to compute the SHA-256 hash of a file at compile time."
license = "MIT"
documentation = "https://github.com/gnostr-org/get_file_hash#readme"
homepage = "https://github.com/gnostr-org/get_file_hash"
repository = "https://github.com/gnostr-org/get_file_hash"

[features]
nostr = ["dep:nostr", "dep:nostr-sdk", "dep:serde_json", "dep:sha2", "dep:hex", "dep:reqwest", "dep:tokio", "dep:csv", "dep:url"]

[dependencies]
sha2 = { version = "0.11.0", optional = true }
nostr = { version = "0.44.2", optional = true }
serde_json = { version = "1.0", optional = true }
nostr-sdk = { version = "0.44.0", optional = true }
hex = { version = "0.4.2", optional = true }
csv = { version = "1.3.0", default-features = false, optional = true }
url = { version = "2.5.0", optional = true }

[dev-dependencies]
sha2 = "0.11.0"
tempfile = "3.27.0"
nostr = "0.44.2"
nostr-sdk = "0.44.0"
serde_json = "1.0"
hex = "0.4.2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
csv = "1.3.0"
url = "2.5.0"

[build-dependencies]
reqwest = { version = "0.12.0", features = ["json"], default-features = false, optional = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread"], optional = true }
